src/parser.output
Terminals unused in grammar

   TOKEN_EOF
   TOKEN_WHILE
   TOKEN_C_COMMENT
   TOKEN_COMMENT
   TOKEN_ERROR


Grammar

    0 $accept: program $end

    1 program: stmts
    2        | %empty

    3 stmts: stmt
    4      | stmt stmts

    5 stmt: open_stmt
    6     | closed_stmt
    7     | other_stmt
    8     | decl

    9 if_then: TOKEN_IF TOKEN_L_PAREN expr TOKEN_R_PAREN

   10 open_stmt: if_then open_stmt
   11          | if_then simple_stmt TOKEN_SEMICOLON
   12          | if_then simple_stmts
   13          | if_then closed_stmt TOKEN_ELSE open_stmt

   14 closed_stmt: simple_stmt TOKEN_SEMICOLON
   15            | if_then closed_stmt TOKEN_ELSE closed_stmt
   16            | simple_stmts

   17 other_stmt: TOKEN_FOR TOKEN_L_PAREN for_list TOKEN_R_PAREN stmt

   18 simple_stmts: TOKEN_L_BRACE stmts TOKEN_R_BRACE

   19 simple_stmt: TOKEN_PRINT arg_list
   20            | TOKEN_PRINT
   21            | TOKEN_RETURN expr
   22            | TOKEN_RETURN
   23            | expr

   24 for_list: opt_expr TOKEN_SEMICOLON opt_expr TOKEN_SEMICOLON opt_expr

   25 opt_expr: expr
   26         | %empty

   27 param: ident TOKEN_COLON type

   28 decl: param TOKEN_SEMICOLON
   29     | param TOKEN_ASSIGN closed_stmt

   30 type: TOKEN_TYPE_ARRAY TOKEN_L_BRACKET TOKEN_R_BRACKET type
   31     | TOKEN_TYPE_ARRAY TOKEN_L_BRACKET TOKEN_NUMBER TOKEN_R_BRACKET type
   32     | TOKEN_TYPE_AUTO
   33     | TOKEN_TYPE_BOOLEAN
   34     | TOKEN_TYPE_CHAR
   35     | TOKEN_TYPE_INTEGER
   36     | TOKEN_TYPE_STRING
   37     | TOKEN_TYPE_VOID
   38     | TOKEN_TYPE_FUNCTION type TOKEN_L_PAREN param_list TOKEN_R_PAREN
   39     | TOKEN_TYPE_FUNCTION type TOKEN_L_PAREN TOKEN_R_PAREN

   40 param_list: param
   41           | param TOKEN_COMMA param_list

   42 expr: expr TOKEN_LESS subexpr
   43     | expr TOKEN_GREATER subexpr
   44     | expr TOKEN_LESS_EQUAL subexpr
   45     | expr TOKEN_GREATER_EQUAL subexpr
   46     | expr TOKEN_EQUAL subexpr
   47     | expr TOKEN_NOT_EQUAL subexpr
   48     | expr TOKEN_AND subexpr
   49     | expr TOKEN_OR subexpr
   50     | expr TOKEN_ASSIGN subexpr
   51     | expr TOKEN_ASSIGN TOKEN_L_BRACE arg_list TOKEN_R_BRACE
   52     | expr TOKEN_L_BRACKET expr TOKEN_R_BRACKET
   53     | subexpr

   54 subexpr: subexpr TOKEN_ADD term
   55        | subexpr TOKEN_SUBTRACT term
   56        | term

   57 term: term TOKEN_MULTIPLY factor
   58     | term TOKEN_DIVIDE factor
   59     | term TOKEN_MOD factor
   60     | factor

   61 factor: factor TOKEN_POWER atomic
   62       | factor TOKEN_INCREMENT
   63       | factor TOKEN_DECREMENT
   64       | atomic

   65 atomic: TOKEN_L_PAREN expr TOKEN_R_PAREN
   66       | ident TOKEN_L_PAREN arg_list TOKEN_R_PAREN
   67       | ident TOKEN_L_PAREN TOKEN_R_PAREN
   68       | TOKEN_SUBTRACT atomic
   69       | TOKEN_ADD atomic
   70       | TOKEN_NUMBER
   71       | TOKEN_CHAR
   72       | TOKEN_STRING
   73       | TOKEN_FALSE
   74       | TOKEN_TRUE
   75       | TOKEN_NOT atomic
   76       | ident

   77 ident: TOKEN_IDENT

   78 arg_list: expr
   79         | expr TOKEN_COMMA arg_list


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_EOF (258)
TOKEN_WHILE (259)
TOKEN_IF (260) 9
TOKEN_ELSE (261) 13 15
TOKEN_FOR (262) 17
TOKEN_PRINT (263) 19 20
TOKEN_TRUE (264) 74
TOKEN_FALSE (265) 73
TOKEN_RETURN (266) 21 22
TOKEN_ADD (267) 54 69
TOKEN_MULTIPLY (268) 57
TOKEN_DIVIDE (269) 58
TOKEN_MOD (270) 59
TOKEN_SUBTRACT (271) 55 68
TOKEN_POWER (272) 61
TOKEN_DECREMENT (273) 63
TOKEN_INCREMENT (274) 62
TOKEN_IDENT (275) 77
TOKEN_C_COMMENT (276)
TOKEN_COMMENT (277)
TOKEN_NUMBER (278) 31 70
TOKEN_STRING (279) 72
TOKEN_CHAR (280) 71
TOKEN_TYPE_STRING (281) 36
TOKEN_TYPE_INTEGER (282) 35
TOKEN_TYPE_BOOLEAN (283) 33
TOKEN_TYPE_FUNCTION (284) 38 39
TOKEN_TYPE_VOID (285) 37
TOKEN_TYPE_AUTO (286) 32
TOKEN_TYPE_CHAR (287) 34
TOKEN_TYPE_ARRAY (288) 30 31
TOKEN_GREATER_EQUAL (289) 45
TOKEN_GREATER (290) 43
TOKEN_EQUAL (291) 46
TOKEN_LESS (292) 42
TOKEN_LESS_EQUAL (293) 44
TOKEN_NOT_EQUAL (294) 47
TOKEN_AND (295) 48
TOKEN_OR (296) 49
TOKEN_NOT (297) 75
TOKEN_COLON (298) 27
TOKEN_SEMICOLON (299) 11 14 24 28
TOKEN_L_BRACKET (300) 30 31 52
TOKEN_R_BRACKET (301) 30 31 52
TOKEN_L_PAREN (302) 9 17 38 39 65 66 67
TOKEN_R_PAREN (303) 9 17 38 39 65 66 67
TOKEN_L_BRACE (304) 18 51
TOKEN_R_BRACE (305) 18 51
TOKEN_ASSIGN (306) 29 50 51
TOKEN_COMMA (307) 41 79
TOKEN_ERROR (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1 2, on right: 0
stmts (56)
    on left: 3 4, on right: 1 4 18
stmt (57)
    on left: 5 6 7 8, on right: 3 4 17
if_then (58)
    on left: 9, on right: 10 11 12 13 15
open_stmt (59)
    on left: 10 11 12 13, on right: 5 10 13
closed_stmt (60)
    on left: 14 15 16, on right: 6 13 15 29
other_stmt (61)
    on left: 17, on right: 7
simple_stmts (62)
    on left: 18, on right: 12 16
simple_stmt (63)
    on left: 19 20 21 22 23, on right: 11 14
for_list (64)
    on left: 24, on right: 17
opt_expr (65)
    on left: 25 26, on right: 24
param (66)
    on left: 27, on right: 28 29 40 41
decl (67)
    on left: 28 29, on right: 8
type (68)
    on left: 30 31 32 33 34 35 36 37 38 39, on right: 27 30 31 38 39
param_list (69)
    on left: 40 41, on right: 38 41
expr (70)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53, on right: 9 21 23
    25 42 43 44 45 46 47 48 49 50 51 52 65 78 79
subexpr (71)
    on left: 54 55 56, on right: 42 43 44 45 46 47 48 49 50 53 54 55
term (72)
    on left: 57 58 59 60, on right: 54 55 56 57 58 59
factor (73)
    on left: 61 62 63 64, on right: 57 58 59 60 61 62 63
atomic (74)
    on left: 65 66 67 68 69 70 71 72 73 74 75 76, on right: 61 64 68
    69 75
ident (75)
    on left: 77, on right: 27 66 67 76
arg_list (76)
    on left: 78 79, on right: 19 51 66 79


State 0

    0 $accept: . program $end

    TOKEN_IF        shift, and go to state 1
    TOKEN_FOR       shift, and go to state 2
    TOKEN_PRINT     shift, and go to state 3
    TOKEN_TRUE      shift, and go to state 4
    TOKEN_FALSE     shift, and go to state 5
    TOKEN_RETURN    shift, and go to state 6
    TOKEN_ADD       shift, and go to state 7
    TOKEN_SUBTRACT  shift, and go to state 8
    TOKEN_IDENT     shift, and go to state 9
    TOKEN_NUMBER    shift, and go to state 10
    TOKEN_STRING    shift, and go to state 11
    TOKEN_CHAR      shift, and go to state 12
    TOKEN_NOT       shift, and go to state 13
    TOKEN_L_PAREN   shift, and go to state 14
    TOKEN_L_BRACE   shift, and go to state 15

    $default  reduce using rule 2 (program)

    program       go to state 16
    stmts         go to state 17
    stmt          go to state 18
    if_then       go to state 19
    open_stmt     go to state 20
    closed_stmt   go to state 21
    other_stmt    go to state 22
    simple_stmts  go to state 23
    simple_stmt   go to state 24
    param         go to state 25
    decl          go to state 26
    expr          go to state 27
    subexpr       go to state 28
    term          go to state 29
    factor        go to state 30
    atomic        go to state 31
    ident         go to state 32


State 1

    9 if_then: TOKEN_IF . TOKEN_L_PAREN expr TOKEN_R_PAREN

    TOKEN_L_PAREN  shift, and go to state 33


State 2

   17 other_stmt: TOKEN_FOR . TOKEN_L_PAREN for_list TOKEN_R_PAREN stmt

    TOKEN_L_PAREN  shift, and go to state 34


State 3

   19 simple_stmt: TOKEN_PRINT . arg_list
   20            | TOKEN_PRINT .

    TOKEN_TRUE      shift, and go to state 4
    TOKEN_FALSE     shift, and go to state 5
    TOKEN_ADD       shift, and go to state 7
    TOKEN_SUBTRACT  shift, and go to state 8
    TOKEN_IDENT     shift, and go to state 9
    TOKEN_NUMBER    shift, and go to state 10
    TOKEN_STRING    shift, and go to state 11
    TOKEN_CHAR      shift, and go to state 12
    TOKEN_NOT       shift, and go to state 13
    TOKEN_L_PAREN   shift, and go to state 14

    $default  reduce using rule 20 (simple_stmt)

    expr      go to state 35
    subexpr   go to state 28
    term      go to state 29
    factor    go to state 30
    atomic    go to state 31
    ident     go to state 36
    arg_list  go to state 37


State 4

   74 atomic: TOKEN_TRUE .

    $default  reduce using rule 74 (atomic)


State 5

   73 atomic: TOKEN_FALSE .

    $default  reduce using rule 73 (atomic)


State 6

   21 simple_stmt: TOKEN_RETURN . expr
   22            | TOKEN_RETURN .

    TOKEN_TRUE      shift, and go to state 4
    TOKEN_FALSE     shift, and go to state 5
    TOKEN_ADD       shift, and go to state 7
    TOKEN_SUBTRACT  shift, and go to state 8
    TOKEN_IDENT     shift, and go to state 9
    TOKEN_NUMBER    shift, and go to state 10
    TOKEN_STRING    shift, and go to state 11
    TOKEN_CHAR      shift, and go to state 12
    TOKEN_NOT       shift, and go to state 13
    TOKEN_L_PAREN   shift, and go to state 14

    $default  reduce using rule 22 (simple_stmt)

    expr     go to state 38
    subexpr  go to state 28
    term     go to state 29
    factor   go to state 30
    atomic   go to state 31
    ident    go to state 36


State 7

   69 atomic: TOKEN_ADD . atomic

    TOKEN_TRUE      shift, and go to state 4
    TOKEN_FALSE     shift, and go to state 5
    TOKEN_ADD       shift, and go to state 7
    TOKEN_SUBTRACT  shift, and go to state 8
    TOKEN_IDENT     shift, and go to state 9
    TOKEN_NUMBER    shift, and go to state 10
    TOKEN_STRING    shift, and go to state 11
    TOKEN_CHAR      shift, and go to state 12
    TOKEN_NOT       shift, and go to state 13
    TOKEN_L_PAREN   shift, and go to state 14

    atomic  go to state 39
    ident   go to state 36


State 8

   68 atomic: TOKEN_SUBTRACT . atomic

    TOKEN_TRUE      shift, and go to state 4
    TOKEN_FALSE     shift, and go to state 5
    TOKEN_ADD       shift, and go to state 7
    TOKEN_SUBTRACT  shift, and go to state 8
    TOKEN_IDENT     shift, and go to state 9
    TOKEN_NUMBER    shift, and go to state 10
    TOKEN_STRING    shift, and go to state 11
    TOKEN_CHAR      shift, and go to state 12
    TOKEN_NOT       shift, and go to state 13
    TOKEN_L_PAREN   shift, and go to state 14

    atomic  go to state 40
    ident   go to state 36


State 9

   77 ident: TOKEN_IDENT .

    $default  reduce using rule 77 (ident)


State 10

   70 atomic: TOKEN_NUMBER .

    $default  reduce using rule 70 (atomic)


State 11

   72 atomic: TOKEN_STRING .

    $default  reduce using rule 72 (atomic)


State 12

   71 atomic: TOKEN_CHAR .

    $default  reduce using rule 71 (atomic)


State 13

   75 atomic: TOKEN_NOT . atomic

    TOKEN_TRUE      shift, and go to state 4
    TOKEN_FALSE     shift, and go to state 5
    TOKEN_ADD       shift, and go to state 7
    TOKEN_SUBTRACT  shift, and go to state 8
    TOKEN_IDENT     shift, and go to state 9
    TOKEN_NUMBER    shift, and go to state 10
    TOKEN_STRING    shift, and go to state 11
    TOKEN_CHAR      shift, and go to state 12
    TOKEN_NOT       shift, and go to state 13
    TOKEN_L_PAREN   shift, and go to state 14

    atomic  go to state 41
    ident   go to state 36


State 14

   65 atomic: TOKEN_L_PAREN . expr TOKEN_R_PAREN

    TOKEN_TRUE      shift, and go to state 4
    TOKEN_FALSE     shift, and go to state 5
    TOKEN_ADD       shift, and go to state 7
    TOKEN_SUBTRACT  shift, and go to state 8
    TOKEN_IDENT     shift, and go to state 9
    TOKEN_NUMBER    shift, and go to state 10
    TOKEN_STRING    shift, and go to state 11
    TOKEN_CHAR      shift, and go to state 12
    TOKEN_NOT       shift, and go to state 13
    TOKEN_L_PAREN   shift, and go to state 14

    expr     go to state 42
    subexpr  go to state 28
    term     go to state 29
    factor   go to state 30
    atomic   go to state 31
    ident    go to state 36


State 15

   18 simple_stmts: TOKEN_L_BRACE . stmts TOKEN_R_BRACE

    TOKEN_IF        shift, and go to state 1
    TOKEN_FOR       shift, and go to state 2
    TOKEN_PRINT     shift, and go to state 3
    TOKEN_TRUE      shift, and go to state 4
    TOKEN_FALSE     shift, and go to state 5
    TOKEN_RETURN    shift, and go to state 6
    TOKEN_ADD       shift, and go to state 7
    TOKEN_SUBTRACT  shift, and go to state 8
    TOKEN_IDENT     shift, and go to state 9
    TOKEN_NUMBER    shift, and go to state 10
    TOKEN_STRING    shift, and go to state 11
    TOKEN_CHAR      shift, and go to state 12
    TOKEN_NOT       shift, and go to state 13
    TOKEN_L_PAREN   shift, and go to state 14
    TOKEN_L_BRACE   shift, and go to state 15

    stmts         go to state 43
    stmt          go to state 18
    if_then       go to state 19
    open_stmt     go to state 20
    closed_stmt   go to state 21
    other_stmt    go to state 22
    simple_stmts  go to state 23
    simple_stmt   go to state 24
    param         go to state 25
    decl          go to state 26
    expr          go to state 27
    subexpr       go to state 28
    term          go to state 29
    factor        go to state 30
    atomic        go to state 31
    ident         go to state 32


State 16

    0 $accept: program . $end

    $end  shift, and go to state 44


State 17

    1 program: stmts .

    $default  reduce using rule 1 (program)


State 18

    3 stmts: stmt .
    4      | stmt . stmts

    TOKEN_IF        shift, and go to state 1
    TOKEN_FOR       shift, and go to state 2
    TOKEN_PRINT     shift, and go to state 3
    TOKEN_TRUE      shift, and go to state 4
    TOKEN_FALSE     shift, and go to state 5
    TOKEN_RETURN    shift, and go to state 6
    TOKEN_ADD       shift, and go to state 7
    TOKEN_SUBTRACT  shift, and go to state 8
    TOKEN_IDENT     shift, and go to state 9
    TOKEN_NUMBER    shift, and go to state 10
    TOKEN_STRING    shift, and go to state 11
    TOKEN_CHAR      shift, and go to state 12
    TOKEN_NOT       shift, and go to state 13
    TOKEN_L_PAREN   shift, and go to state 14
    TOKEN_L_BRACE   shift, and go to state 15

    $default  reduce using rule 3 (stmts)

    stmts         go to state 45
    stmt          go to state 18
    if_then       go to state 19
    open_stmt     go to state 20
    closed_stmt   go to state 21
    other_stmt    go to state 22
    simple_stmts  go to state 23
    simple_stmt   go to state 24
    param         go to state 25
    decl          go to state 26
    expr          go to state 27
    subexpr       go to state 28
    term          go to state 29
    factor        go to state 30
    atomic        go to state 31
    ident         go to state 32


State 19

   10 open_stmt: if_then . open_stmt
   11          | if_then . simple_stmt TOKEN_SEMICOLON
   12          | if_then . simple_stmts
   13          | if_then . closed_stmt TOKEN_ELSE open_stmt
   15 closed_stmt: if_then . closed_stmt TOKEN_ELSE closed_stmt

    TOKEN_IF        shift, and go to state 1
    TOKEN_PRINT     shift, and go to state 3
    TOKEN_TRUE      shift, and go to state 4
    TOKEN_FALSE     shift, and go to state 5
    TOKEN_RETURN    shift, and go to state 6
    TOKEN_ADD       shift, and go to state 7
    TOKEN_SUBTRACT  shift, and go to state 8
    TOKEN_IDENT     shift, and go to state 9
    TOKEN_NUMBER    shift, and go to state 10
    TOKEN_STRING    shift, and go to state 11
    TOKEN_CHAR      shift, and go to state 12
    TOKEN_NOT       shift, and go to state 13
    TOKEN_L_PAREN   shift, and go to state 14
    TOKEN_L_BRACE   shift, and go to state 15

    if_then       go to state 19
    open_stmt     go to state 46
    closed_stmt   go to state 47
    simple_stmts  go to state 48
    simple_stmt   go to state 49
    expr          go to state 27
    subexpr       go to state 28
    term          go to state 29
    factor        go to state 30
    atomic        go to state 31
    ident         go to state 36


State 20

    5 stmt: open_stmt .

    $default  reduce using rule 5 (stmt)


State 21

    6 stmt: closed_stmt .

    $default  reduce using rule 6 (stmt)


State 22

    7 stmt: other_stmt .

    $default  reduce using rule 7 (stmt)


State 23

   16 closed_stmt: simple_stmts .

    $default  reduce using rule 16 (closed_stmt)


State 24

   14 closed_stmt: simple_stmt . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 50


State 25

   28 decl: param . TOKEN_SEMICOLON
   29     | param . TOKEN_ASSIGN closed_stmt

    TOKEN_SEMICOLON  shift, and go to state 51
    TOKEN_ASSIGN     shift, and go to state 52


State 26

    8 stmt: decl .

    $default  reduce using rule 8 (stmt)


State 27

   23 simple_stmt: expr .
   42 expr: expr . TOKEN_LESS subexpr
   43     | expr . TOKEN_GREATER subexpr
   44     | expr . TOKEN_LESS_EQUAL subexpr
   45     | expr . TOKEN_GREATER_EQUAL subexpr
   46     | expr . TOKEN_EQUAL subexpr
   47     | expr . TOKEN_NOT_EQUAL subexpr
   48     | expr . TOKEN_AND subexpr
   49     | expr . TOKEN_OR subexpr
   50     | expr . TOKEN_ASSIGN subexpr
   51     | expr . TOKEN_ASSIGN TOKEN_L_BRACE arg_list TOKEN_R_BRACE
   52     | expr . TOKEN_L_BRACKET expr TOKEN_R_BRACKET

    TOKEN_GREATER_EQUAL  shift, and go to state 53
    TOKEN_GREATER        shift, and go to state 54
    TOKEN_EQUAL          shift, and go to state 55
    TOKEN_LESS           shift, and go to state 56
    TOKEN_LESS_EQUAL     shift, and go to state 57
    TOKEN_NOT_EQUAL      shift, and go to state 58
    TOKEN_AND            shift, and go to state 59
    TOKEN_OR             shift, and go to state 60
    TOKEN_L_BRACKET      shift, and go to state 61
    TOKEN_ASSIGN         shift, and go to state 62

    $default  reduce using rule 23 (simple_stmt)


State 28

   53 expr: subexpr .
   54 subexpr: subexpr . TOKEN_ADD term
   55        | subexpr . TOKEN_SUBTRACT term

    TOKEN_ADD       shift, and go to state 63
    TOKEN_SUBTRACT  shift, and go to state 64

    $default  reduce using rule 53 (expr)


State 29

   56 subexpr: term .
   57 term: term . TOKEN_MULTIPLY factor
   58     | term . TOKEN_DIVIDE factor
   59     | term . TOKEN_MOD factor

    TOKEN_MULTIPLY  shift, and go to state 65
    TOKEN_DIVIDE    shift, and go to state 66
    TOKEN_MOD       shift, and go to state 67

    $default  reduce using rule 56 (subexpr)


State 30

   60 term: factor .
   61 factor: factor . TOKEN_POWER atomic
   62       | factor . TOKEN_INCREMENT
   63       | factor . TOKEN_DECREMENT

    TOKEN_POWER      shift, and go to state 68
    TOKEN_DECREMENT  shift, and go to state 69
    TOKEN_INCREMENT  shift, and go to state 70

    $default  reduce using rule 60 (term)


State 31

   64 factor: atomic .
